[U] update cache docs

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="utf-8"/>
-    <title>{{ page.title }}</title>
+    <title>{{ page.title | page.subtitle }}</title>
     <link href="/favicon.ico" rel="shortcut icon">
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
           name='viewport'/>
