[U] update version 0.4.0-SNAPSHOT

--- a/docs/assets/css/post.css
+++ b/docs/assets/css/post.css
@@ -141,7 +141,7 @@ body {
 .post-content {
     font-family: Roboto, Helvetica, Arial, sans-serif;
     line-height: 1.7;
-    font-size: 16px;
+    /*font-size: 16px;*/
     color: #404040;
     font-weight: 400;
 }
