--- a/final-coding/final-coding-entity/src/main/resources/template/entity/final.entities.vm
+++ b/final-coding/final-coding-entity/src/main/resources/template/entity/final.entities.vm
@@ -1,5 +1,6 @@
+#* @formatter:off *#
 #if($entities)
-    #foreach($!{item} in $!{entities.entities})
-        ${item}
+    #foreach($!{item} in $!{entities})
+${item}
     #end
 #end
