--- a/final-coding/final-coding-spring/src/main/resources/template/spring/spring.factories.vm
+++ b/final-coding/final-coding-spring/src/main/resources/template/spring/spring.factories.vm
@@ -1,4 +1,4 @@
-#foreach($entry in ${springFactories.springFactories.entrySet()})
+#foreach($entry in ${springFactories.entrySet()})
     #set($key = $entry.key)
     #set($list = $entry.value)
     #if($list)
