--- a/docs/_includes/sidebar/sidebar-menu.html
+++ b/docs/_includes/sidebar/sidebar-menu.html
@@ -5,14 +5,14 @@
             <i class="material-icons" v-html="menu1.icon"></i>
             <p v-html="menu1.name"></p>
         </a>
-        <a :class="page.menus[0] == menu1.id ? '' : 'collapsed'" :href="'#menu1' + menu1.id" class="nav-link"
+        <a :class="page.menus[0] == menu1.id ? '' : 'collapsed'" :href="'#' + menu1.id" class="nav-link"
            data-toggle="collapse" v-if="menu1.menus">
             <i class="material-icons" v-html="menu1.icon"></i>
             <p> {{menu1.name}}
                 <b class="caret"></b>
             </p>
         </a>
-        <div :class="page.menus[0] == menu1.id ? 'show' : ''" :id="'menu1' + menu1.id" class="collapse"
+        <div :class="page.menus[0] == menu1.id ? 'show' : ''" :id="menu1.id" class="collapse"
              v-if="menu1.menus">
             <ul class="nav">
                 <li :class="page.menus[0] == menu1.id && page.menus[1] == menu2.id ? 'active' : ''" class="nav-item "
@@ -21,12 +21,14 @@
                         <span class="sidebar-mini" v-html="menu2.mini"> P </span>
                         <span class="sidebar-normal" v-html="menu2.name"> Pricing </span>
                     </a>
-                    <a :href="'#menu2' + menu2.id" aria-expanded="true" class="nav-link" data-toggle="collapse"
+                    <a :href="'#' + menu1.id +'@'+ menu2.id" aria-expanded="true" class="nav-link"
+                       data-toggle="collapse"
                        v-if="menu2.menus">
                         <span class="sidebar-mini" v-html="menu2.mini"> MLT </span>
                         <span class="sidebar-normal"> <span v-html="menu2.name"></span><b class="caret"></b></span>
                     </a>
-                    <div :class="page.menus[1] == menu2.id ? 'show' : ''" :id="'menu2' + menu2.id" class="collapse"
+                    <div :class="page.menus[1] == menu2.id ? 'show' : ''" :id="menu1.id +'@' + menu2.id"
+                         class="collapse"
                          v-if="menu2.menus">
                         <ul class="nav">
                             <li :class="page.menus[0] == menu1.id && page.menus[1] == menu2.id && page.menus[2] == menu3.id ? 'active' : ''"
@@ -36,13 +38,15 @@
                                     <span class="sidebar-mini" v-html="menu3.mini"> E </span>
                                     <span class="sidebar-normal" v-html="menu3.name"> Example </span>
                                 </a>
-                                <a :href="'#menu3' + menu3.id" aria-expanded="true" class="nav-link"
+                                <a :href="'#' + menu1.id +'@' + menu2.id +'@' + menu3.id" aria-expanded="true"
+                                   class="nav-link"
                                    data-toggle="collapse"
                                    v-if="menu3.menus">
                                     <span class="sidebar-mini" v-html="menu3.mini"> MLT </span>
                                     <span class="sidebar-normal"> <span v-html="menu3.name"></span><b class="caret"></b></span>
                                 </a>
-                                <div :class="page.menus[2] == menu3.id ? 'show' : ''" :id="'menu3' + menu3.id"
+                                <div :class="page.menus[2] == menu3.id ? 'show' : ''"
+                                     :id="menu1.id +'@' + menu2.id +'@' + menu3.id"
                                      class="collapse"
                                      v-if="menu3.menus">
                                     <ul class="nav">
