--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -27,6 +27,12 @@
                                 </a>
                                 <div class="category">
                                     {{ page.description | markdownify }}
+
+                                </div>
+                                <div>
+                                    {% for tag in page.tags %}
+                                    <span class="badge badge-primary">{{tag}}</span>
+                                    {% endfor %}
                                 </div>
                             </div>
                         </div>
