--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -9,6 +9,7 @@
             </div>
             <a class="navbar-brand" href="#pablo">{{ page.title }}</a>
         </div>
+        <!--        -->
         <button aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation"
                 class="navbar-toggler" data-toggle="collapse" type="button">
             <span class="sr-only">Toggle navigation</span>
@@ -16,5 +17,43 @@
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
+        <div class="collapse navbar-collapse justify-content-end">
+            <form class="navbar-form">
+              <span class="bmd-form-group"><div class="input-group no-border">
+                <input class="form-control" placeholder="Search..." type="text" value="">
+                <button class="btn btn-white btn-round btn-just-icon" type="submit">
+                  <i class="material-icons">search</i>
+                  <div class="ripple-container"></div>
+                </button>
+              </div></span>
+            </form>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/documents/index.html">
+                        <i class="material-icons">book</i>
+                        <p class="d-lg-none d-md-block">
+                            Stats
+                        </p>
+                        <div class="ripple-container"></div>
+                    </a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a aria-expanded="false" aria-haspopup="true" class="nav-link" data-toggle="dropdown"
+                       href="javascript:;" id="navbarDropdownProfile">
+                        <i class="material-icons">person</i>
+                        <p class="d-lg-none d-md-block">
+                            Account
+                        </p>
+                    </a>
+                    <div aria-labelledby="navbarDropdownProfile" class="dropdown-menu dropdown-menu-right">
+                        <a class="dropdown-item" href="/resume/index.html">Resume</a>
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#">Settings</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Log out</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </nav>
