--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -72,4 +72,5 @@
     <script src="{{site.baseurl}}/assets/js/docs.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/markdown.js"></script>
     <script src="{{site.baseurl}}/assets/js/toc.js"></script>
+    <script src="{{site.baseurl}}/assets/js/http.js"></script>
 </head>
