--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -38,6 +38,9 @@
     <!-- Forms Validations Plugin -->
     <script src="{{site.baseurl}}/assets/js/plugins/jquery.validate.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/plugins/jquery.cookie.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/jquery.json.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/bignumber.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/jsonpath.js"></script>
     <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
     <script src="{{site.baseurl}}/assets/js/plugins/jquery.bootstrap-wizard.js"></script>
     <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
@@ -73,4 +76,19 @@
     <script src="{{site.baseurl}}/assets/js/markdown.js"></script>
     <script src="{{site.baseurl}}/assets/js/toc.js"></script>
     <script src="{{site.baseurl}}/assets/js/http.js"></script>
+    <style type="text/css">
+        .request {
+
+        }
+
+        .request .bootstrap-select:not([class*=col-]):not([class*=form-control]):not(.input-group-btn) {
+            width: 150px;
+            text-align: center;
+        }
+
+        .request .filter-option-inner {
+            text-align: center;
+        }
+
+    </style>
 </head>
