[U] add final-spiriter-redis

--- a/docs/_layouts/dashboard.html
+++ b/docs/_layouts/dashboard.html
@@ -46,7 +46,7 @@
             <div class="user">
                 <div style="padding: 0 30px">
                     <div class="input-group no-border text-primary">
-                        <input class="form-control text-primary" placeholder="Filter... "
+                        <input class="form-control text-white" placeholder="Filter... "
                                style="font-weight: bold;font-family: 'Cascadia Code' Monospaced" type="text"
                                v-model="filter" value="">
                     </div>
