--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -22,6 +22,8 @@
     <link href="{{site.baseurl}}/assets/css/post.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/markdown.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/base16.solarized.dark.css" rel="stylesheet"/>
+    <link href="{{site.baseurl}}/assets/css/bootstrap-table.css" rel="stylesheet"/>
+    <link href="{{site.baseurl}}/assets/css/bootstrap-table-fixed-columns.css" rel="stylesheet"/>
     <!-- CSS Just for demo purpose, don't include it in your project -->
     <!--<link href="/assets/demo/demo.css" rel="stylesheet" />-->
 
@@ -63,6 +65,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
     <!-- Library for adding dinamically elements -->
     <script src="{{site.baseurl}}/assets/js/plugins/arrive.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-table.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-table-fixed-columns.js"></script>
     <!-- Chartist JS -->
     <script src="{{site.baseurl}}/assets/js/plugins/chartist.min.js"></script>
     <!--  Notifications Plugin    -->
