--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,3 +1,20 @@
+<!--
+  ~ Copyright (c) 2018-2020.  the original author or authors.
+  ~  <p>
+  ~  Licensed under the Apache License, Version 2.0 (the "License");
+  ~  you may not use this file except in compliance with the License.
+  ~  You may obtain a copy of the License at
+  ~  <p>
+  ~  http://www.apache.org/licenses/LICENSE-2.0
+  ~  <p>
+  ~  Unless required by applicable law or agreed to in writing, software
+  ~  distributed under the License is distributed on an "AS IS" BASIS,
+  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~  See the License for the specific language governing permissions and
+  ~  limitations under the License.
+  ~
+  -->
+
 <head>
     <meta charset="utf-8"/>
     <title>{{ page.title }} | {{ page.subtitle }}</title>
@@ -22,6 +39,7 @@
     <link href="{{site.baseurl}}/assets/css/post.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/markdown.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/base16.solarized.dark.css" rel="stylesheet"/>
+    <link href="{{site.baseurl}}/assets/css/bootstrap-treeview.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/bootstrap-table.css" rel="stylesheet"/>
     <link href="{{site.baseurl}}/assets/css/bootstrap-table-fixed-columns.css" rel="stylesheet"/>
     <!-- CSS Just for demo purpose, don't include it in your project -->
@@ -65,12 +83,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/core-js/2.4.1/core.js"></script>
     <!-- Library for adding dinamically elements -->
     <script src="{{site.baseurl}}/assets/js/plugins/arrive.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-treeview.js"></script>
     <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-table.js"></script>
     <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-table-fixed-columns.js"></script>
     <!-- Chartist JS -->
     <script src="{{site.baseurl}}/assets/js/plugins/chartist.min.js"></script>
     <!--  Notifications Plugin    -->
     <script src="{{site.baseurl}}/assets/js/plugins/bootstrap-notify.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/jszip.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/plugins/FileSaver.min.js"></script>
     <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
     <script src="{{site.baseurl}}/assets/js/material-dashboard.js?v=2.1.0" type="text/javascript"></script>
     <!-- Material Dashboard DEMO methods, don't include it in your project! -->
