--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/head.html
@@ -20,6 +20,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <!-- CSS Files -->
     <link href="/css/material-dashboard.css" rel="stylesheet"/>
+    <link href="/css/codemirror.css" rel="stylesheet"/>
     <link href="/css/docs.min.css" rel="stylesheet"/>
     <link href="/css/post.css" rel="stylesheet"/>
     <link href="/css/markdown.css" rel="stylesheet"/>
@@ -31,6 +32,7 @@
     <script src="/js/core/jquery.min.js"></script>
     <script src="/js/core/popper.min.js"></script>
     <script src="/js/core/bootstrap-material-design.js"></script>
+    <script src="/js/plugins/codemirror.js"></script>
     <script src="/js/plugins/perfect-scrollbar.jquery.min.js"></script>
     <!-- Plugin for the momentJs  -->
     <script src="/js/plugins/moment.min.js"></script>
@@ -39,6 +41,7 @@
     <!-- Forms Validations Plugin -->
     <script src="/js/plugins/jquery.validate.min.js"></script>
     <script src="/js/plugins/jquery.cookie.min.js"></script>
+    <script src="/js/plugins/jquery.format.js"></script>
     <!-- Plugin for the Wizard, full documentation here: https://github.com/VinceG/twitter-bootstrap-wizard -->
     <script src="/js/plugins/jquery.bootstrap-wizard.js"></script>
     <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
