--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/sidebar/sidebar.html
@@ -60,16 +60,21 @@
                             mini: 'ETY',
                             link: '/dashboard/documents/entity'
                         }, {
-                            id: 'enum',
+                            id: 'enums',
                             name: 'Enums',
                             mini: 'EMS',
                             link: '/dashboard/documents/enums'
                         }, {
-                            id: 'entity',
-                            name: 'Entity',
-                            mini: 'ETY',
-                            link: '/dashboard/documents/entity'
+                            id: 'query',
+                            name: 'Query',
+                            mini: 'QEY',
+                            link: '/dashboard/documents/query'
                         }]
+                    }, {
+                        id: 'request-mapping',
+                        name: 'RequestMapping',
+                        icon: 'dashboard',
+                        link: '/dashboard/request-mapping'
                     }]
                 }
             },
