--- a/final-framework/final-dashboard-ui/src/main/resources/templates/index.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" layout:decorate="layout/admin.html" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+<html lang="en" layout:decorate="layout/dashboard.html" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
