--- a/final-framework/final-dashboard-ui/src/main/resources/templates/dashboard/mybatis/query.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/dashboard/mybatis/query.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>query</title>
-
 </head>
 <body>
 <div id="query" layout:fragment="content">
@@ -15,7 +14,7 @@
                     <div class="card ">
                         <div class="card-header card-header-rose card-header-icon">
                             <div class="card-icon">
-                                <i class="material-icons">mail_outline</i>
+                                <i class="material-icons">search</i>
                             </div>
                             <h4 class="card-title">Query</h4>
                         </div>
@@ -59,8 +58,8 @@
                         <div class="card-footer text-right">
                             <div class="mr-auto">
                             </div>
-                            <button @click="format" class="btn btn-default" type="button">format</button>
-                            <button @click="doQuery" class="btn btn-info" type="button">query</button>
+                            <button @click="format" class="btn btn-default" type="button">FORMAT</button>
+                            <button @click="doQuery" class="btn btn-info" type="button">QUERY</button>
                         </div>
                     </div>
                 </form>
@@ -92,10 +91,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card-body ">
-
-
-                        <div class="tab-content text-center">
+                    <div class="card-body">
+                        <div class="tab-content">
                             <div class="tab-pane active show" id="sql">
                                 <div class="row">
                                     <div class="col-12">
@@ -129,8 +126,11 @@
                             </div>
 
                             <div class="tab-pane " id="xml">
-                                <textarea class="form-control" id="xml-value" rows="10"
-                                          v-html="$.format(result.script, {method: 'xml'})"></textarea>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <textarea class="form-control" id="xml-value" rows="10"></textarea>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -155,16 +155,29 @@
                     sql: null,
                     parameterMappings: []
                 },
+                xml: null
             },
             mounted: function () {
                 let self = this;
                 self.editor = CodeMirror.fromTextArea(document.getElementById('query-value'), {
                     lineNumbers: true,
                     matchBrackets: true,
-                    mode: "application/json",
+                    mode: "application/ld+json",
+                    // mode: "application/xml",
                     indentUnit: 4,
-                    indentWithTabs: true,
+                    indentWithTabs: false,
+                    // theme: 'solarized dark'
                 });
+                self.xml = CodeMirror.fromTextArea(document.getElementById('xml-value'), {
+                    lineNumbers: true,
+                    matchBrackets: true,
+                    mode: "application/xml",
+                    indentUnit: 4,
+                    indentWithTabs: false,
+                    // theme: 'solarized dark'
+                });
+
+                self.xml.getDoc().setValue('<script/>');
 
                 self.init();
             },
@@ -207,6 +220,10 @@
                     }, function (result) {
                         swal.close();
                         self.result = result.data;
+                        let xml = $.format(self.result.script, {method: 'xml'});
+                        console.log(xml);
+                        self.xml.getDoc().setValue(xml);
+                        // self.xml.getDoc().setValue(self.result.script);
                     })
 
                     return false;
