--- a/final-framework/final-dashboard-ui/src/main/resources/templates/layout/dashboard.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/layout/dashboard.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+<html lang="zh_CN" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       xmlns:th="http://www.thymeleaf.org">
-    <head th:replace="replace/head.html">
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
-    <body style="background-color: #eeeeee">
-        <div class="d-none">
-            <p id="page" th:text="${#json.toJson(page)}"></p>
-        </div>
-        <div class="wrapper ">
+<head th:replace="replace/head.html">
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body style="background-color: #eeeeee">
+<div class="d-none">
+    <p id="page" th:text="${#json.toJson(page)}"></p>
+</div>
+<div class="wrapper ">
             <div class="sidebar" th:replace="replace/sidebar/sidebar.html"></div>
             <div class="main-panel">
                 <!-- Navbar -->
