--- a/final-framework/final-dashboard-ui/src/main/resources/templates/replace/navbar.html
+++ b/final-framework/final-dashboard-ui/src/main/resources/templates/replace/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top " th:fragment="navbar"
+     xmlns:th="http://www.thymeleaf.org">
     <div class="container-fluid">
         <div class="navbar-wrapper">
             <div class="navbar-minimize">
@@ -8,7 +9,8 @@
                     <div class="ripple-container"></div>
                 </button>
             </div>
-            <a class="navbar-brand" href="javascript:;">Dashboard
+            <!--/*@thymesVar id="page" type="org.finalframework.dashboard.ui.model.Page"*/-->
+            <a class="navbar-brand" href="javascript:;"><span th:text="${page.title}">title</span>
                 <div class="ripple-container"></div>
             </a>
         </div>
